--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 	"require": {
 		"php": ">7.0.0",
 		"hefang/php-helpers": "1.0.0",
-		"hefang/php-mvc": "1.0.1"
+		"hefang/php-mvc": "1.0.1",
+		"ext-json": "*"
 	},
 	"repositories": {
 		"packagist": {
