--- a/src/themes/simple/manifest.json
+++ b/src/themes/simple/manifest.json
@@ -1,8 +1,9 @@
 {
-	"$schema": "https://hefang.link/schema/hefang-cms/theme.schema.json?v=4",
+	"$schema": "https://hefang.link/schema/hefang-cms/theme.schema.json?v=6",
 	"id": "hefang-cms-theme-simple",
 	"name": "简约白",
 	"version": "1.0.0",
+	"supportVersion": "*",
 	"author": {
 		"name": "hefang",
 		"email": "he@hefang.link",
@@ -16,15 +17,24 @@
 		"白色"
 	],
 	"locales": [
-		"zh-CN",
-		"en-GB"
+		"zh-CN"
 	],
 	"description": "hefang-cms官方自带的简约主题，也做为主题编写示例用",
+	"publicFiles": [
+		"/scripts/",
+		"/styles/"
+	],
 	"settings": [
 		{
+			"name": "固定导航栏",
 			"key": "fixedHeader",
 			"type": "boolean",
-			"name": "固定导航栏",
+			"default": true
+		},
+		{
+			"name": "显示轮播图",
+			"key": "showBanner",
+			"type": "boolean",
 			"default": true
 		}
 	]
