--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"php": ">7.0.0",
 		"hefang/php-helpers": "1.0.0",
 		"hefang/php-mvc": "1.0.1",
-		"ext-json": "*"
+		"ext-json": "*",
+		"ext-dom": "*"
 	},
 	"repositories": {
 		"packagist": {
