添加验证码功能

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
 		"hefang/php-mvc": "*",
 		"ext-json": "*",
 		"ext-dom": "*",
-		"ext-pdo": "*"
+		"ext-pdo": "*",
+		"ext-gd": "*",
+		"ext-mbstring": "*"
 	},
 	"repositories": {
 		"packagist": {
